# stm32-lcd

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.mkd  cmake-mkproject  lcd.c  lcd.h  lcd_char.c  lcd_char.h  lcd_lowlevel.c  lcd_lowlevel.h  main.c  misc.c  misc.h  openocd.cfg  stm32_flash.ld  stm32f10x_conf.h  term.c  term.h  time.c  time.h  uart.c  uart.h
